# bioengine-worker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.datasets  LICENSE  MANIFEST.in  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-datasets.txt  requirements-dev.txt  requirements-test.txt  requirements-worker.txt  requirements.txt
.github/: copilot-instructions.md
.github/skills/: bioengine  bioengine-cellpose-finetuning  bioengine-model-runner  model-runner
.github/workflows/: deploy-applications.yml  docker-publish.yml  version-check.yml
apps/cell-image-search/: README.md  embedder.py  index_manager.py  main.py  manifest.yaml  normalizer.py
apps/cellpose-finetuning/: README.md  main.py  manifest.yaml
apps/composition-demo/: entry_deployment.py  manifest.yaml  runtime_a.py  runtime_b.py  runtime_c.py
apps/demo-app/: README.md  demo_deployment.py  manifest.yaml  tutorial.ipynb
apps/fibsem-mito-analysis/: analysis_deployment.py  manifest.yaml
apps/gpu-test/: gpu_test_deployment.py  manifest.yaml
apps/model-runner/: README.md  entry_deployment.py  manifest.yaml
autoscaler/: config.py  init.py  job_launch.py  main.py  scaler.py  status.py  terminal.py  util.py  zombie.py
autoscaler/hypha/: admin.py  cellpose_service.py  connection.py  service.py  service_registry.py  token_init.py
autoscaler/scaling/: scaler.py  status.py  zombie.py
bioengine/: __init__.py
bioengine/applications/: __init__.py  app_builder.py  apps_manager.py  proxy_deployment.py
bioengine/apps/: __init__.py  builder.py  manager.py  proxy_deployment.py
bioengine/cli/: __init__.py  __main__.py  apps.py  call.py  cli.py  cluster.py
bioengine/cluster/: __init__.py  _ray_compat.py  proxy_actor.py  ray_cluster.py  slurm_workers.py
bioengine/datasets/: README.md  __init__.py  __main__.py  chunk_cache.py  datasets.py  datasets_manager.py  http_zarr_store.py  proxy_server.py
bioengine/ray/: __init__.py  proxy_actor.py  ray_cluster.py  slurm_workers.py
bioengine/utils/: __init__.py  artifact_utils.py  geo_location.py  logger.py  network.py  permissions.py  requirements.py
bioengine/worker/: __init__.py  __main__.py  code_executor.py  worker.py
bioengine_apps/: README.md
bioengine_apps/bia_resolve_url_proxy/: README.md  main.py  manifest.yaml
bioengine_apps/cell-image-search/: README.md  ingestion.py  main.py  manifest.yaml
bioengine_apps/cellpose-finetuning/: main.py  manifest.yaml  model_template.py  tutorial_cellpose_finetuning.ipynb
bioengine_apps/cellpose-finetuning-debug/: README.md  main.py  manifest.yaml  tutorial_cellpose_finetuning.ipynb
bioengine_apps/cellpose-segmentation/: cellpose_deployment.py  manifest.yaml
bioengine_apps/cellpose_finetuning/: README.md  cellpose_training_agent_startup.pyodide.txt  deploy_cellpose.py  index.html  main.py  manifest-prod.yaml  manifest-test.yaml  manifest.yaml  rdf.yaml  redeploy_cellpose.py  test_service.py  tutorial_cellpose_finetuning.ipynb
bioengine_apps/composition-demo/: manifest.yaml
bioengine_apps/deepcell-mesmer/: manifest.yaml  mesmer_deployment.py
bioengine_apps/demo-app/: demo_deployment.py  manifest.yaml
bioengine_apps/demo_deployment/: README.md  main.py  manifest.yaml
bioengine_apps/denoise-and-segment/: denoise_segment_deployment.py  manifest.yaml
bioengine_apps/hello-world/: hello_deployment.py  manifest.yaml
bioengine_apps/instanseg-nuclei/: instanseg_deployment.py  manifest.yaml
bioengine_apps/mitosegnet/: manifest.yaml  mitosegnet_deployment.py
bioengine_apps/model-runner/: SKILL.md  entry_deployment.py  manifest.yaml  runtime_deployment.py
bioengine_apps/model_runner/: README.md  bioimage_model_zoo.py  entry_deployment.py  (+8 more)
bioengine_worker/: __init__.py  __main__.py  app_builder.py  apps_manager.py  code_executer.py  code_executor.py  dataset_manager.py  datasets.py  datasets_manager.py  http_zarr_store.py  proxy_actor.py  proxy_deployment.py  ray_autoscaler.py  ray_cluster.py  ray_cluster_manager.py  ray_cluster_state.py  ray_deployment_manager.py  rtc_proxy_deployment.py  slurm_actor.py  slurm_manager.py  slurm_workers.py  worker.py
docker/: datasets.Dockerfile  ray-cluster.Dockerfile  worker-ray-overlay.Dockerfile  worker.Dockerfile
docs/: apps-guide.md  datasets-guide.md  deployment-guide.md
e2e_tests/: test_ui_e2e.py
hpc_worker/: __main__.py  bioengine_worker.py  config_manager.py  hpc_worker.py  logger.py  ray_autoscaler.py  ray_cluster.py  ray_cluster_manager.py  ray_deployment_manager.py  register_worker.py  slurm_actor.py  worker_status.py
hypha/: cellpose_service.py  config.py  connection.py  service.py  token_init.py  zip_util.py
notebooks/: cellpose_finetuning.ipynb  demo_model_runner.ipynb  model_runner.ipynb  tutorial_cellpose_finetuning.ipynb  tutorial_model_runner.ipynb
scripts/: anndata_to_zarr.py  bioimageio_test_reports.py  create_application.py  create_artifact.py  folder_setup.sh  get_version.py  launch_worker.sh  mamba_env.sh  mamba_packages.sh  mamba_setup.sh  manage_artifact.py  save_application.py  start.sh  start_hpc_worker.sh  start_worker.sh  test_bmz_models.py  tmp_probe_bia_fetch_only.py  token.sh  upload_dataset_to_artifact_manager.py  worker.sh
tests/: README.md  conftest.py  test_artifact_version.py  test_cellpose.py  test_end_to_end.py  test_hpc_worker.py  test_main.py  test_ray_cluster.py  test_ray_cluster_integration.py  test_simple.py
(+125 files in other folders)
